--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.64.1",
     "@tinymce/tinymce-react": "^5.1.1",
+    "@types/cors": "^2.8.17",
     "@types/multer": "^1.4.12",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.38.2",
     "drizzle-zod": "^0.6.0",
